// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should not work with source maps when the "devtool" options are disabled: errors 1`] = `[]`;

exports[`loader should not work with source maps when the "devtool" options are disabled: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};

var simple = function simple() {};

var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function (width, height, data) {
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }

}

const single = 'single';
const myVariable = new MyClass();
/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should not work with source maps when the "devtool" options are disabled: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should not work with source maps when the "devtool" options are disabled: warnings 1`] = `[]`;

exports[`loader should work with inline syntax: errors 1`] = `[]`;

exports[`loader should work with inline syntax: module 1`] = `
"const test1 = require('../../src/cjs.js?exports=Foo!./simple.js');
const test2 = require('../../src/cjs.js?exports=Foo,Bar!./simple.js');
const test4 = require('../../src/cjs.js?exports=Foo!./simple.js');
const test5 = require('../../src/cjs.js?type=commonjs&exports=Foo!./simple.js');
const test6 = require('../../src/cjs.js?type=module&exports=Foo!./simple.js');
const test7 = require('../../src/cjs.js?type=module&exports=default%20Foo!./simple.js');
const test8 = require('../../src/cjs.js?type=module&exports=named%20Foo!./simple.js');
const test9 = require('../../src/cjs.js?type=commonjs&exports=single%20Foo!./simple.js');
const test10 = require('../../src/cjs.js?type=commonjs&exports=multiple%20Foo!./simple.js');
const test11 = require('../../src/cjs.js?type=module&exports=named%20Foo%20FooA!./simple.js');
const test12 = require('../../src/cjs.js?type=module&exports=named|Foo%20FooA,named%20Bar%20BarA!./simple.js');
const test13 = require('../../src/cjs.js?type=module&exports=named|Foo|FooA,named|Bar|BarA!./simple.js');
const test14 = require('../../src/cjs.js?type=module&exports=default|Foo!./simple.js');

module.exports = {
  test1,
  test2,
  test4,
  test5,
  test6,
  test7,
  test8,
  test9,
  test10,
  test11,
  test12,
  test13,
  test14
};
"
`;

exports[`loader should work with inline syntax: result 1`] = `
{
  "test1": {
    "Foo": {
      "Image": [Function],
    },
  },
  "test10": {
    "Foo": {
      "Image": [Function],
    },
  },
  "test11": {
    "FooA": {
      "Image": [Function],
    },
  },
  "test12": {
    "BarA": {
      "test": [
        1,
        2,
        3,
        4,
      ],
    },
    "FooA": {
      "Image": [Function],
    },
  },
  "test13": {
    "BarA": {
      "test": [
        1,
        2,
        3,
        4,
      ],
    },
    "FooA": {
      "Image": [Function],
    },
  },
  "test14": {
    "default": {
      "Image": [Function],
    },
  },
  "test2": {
    "Bar": {
      "test": [
        1,
        2,
        3,
        4,
      ],
    },
    "Foo": {
      "Image": [Function],
    },
  },
  "test4": {
    "Foo": {
      "Image": [Function],
    },
  },
  "test5": {
    "Foo": {
      "Image": [Function],
    },
  },
  "test6": {
    "Foo": {
      "Image": [Function],
    },
  },
  "test7": {
    "default": {
      "Image": [Function],
    },
  },
  "test8": {
    "Foo": {
      "Image": [Function],
    },
  },
  "test9": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with inline syntax: warnings 1`] = `[]`;

exports[`loader should work with multiple object and string values: errors 1`] = `[]`;

exports[`loader should work with multiple object and string values: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export default Bar;
export {
  Foo,
  Baz as BarA
};
"
`;

exports[`loader should work with multiple object and string values: result 1`] = `
{
  "BarA": {
    "nestedFunction": [Function],
    "nestedNumber": "12",
  },
  "Foo": {
    "Image": [Function],
  },
  "default": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
}
`;

exports[`loader should work with multiple object and string values: warnings 1`] = `[]`;

exports[`loader should work with multiple string values: errors 1`] = `[]`;

exports[`loader should work with multiple string values: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo,
  Bar
};
"
`;

exports[`loader should work with multiple string values: result 1`] = `
{
  "Bar": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with multiple string values: warnings 1`] = `[]`;

exports[`loader should work with object value (syntax, name and alias): errors 1`] = `[]`;

exports[`loader should work with object value (syntax, name and alias): module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo as FooA
};
"
`;

exports[`loader should work with object value (syntax, name and alias): result 1`] = `
{
  "FooA": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with object value (syntax, name and alias): warnings 1`] = `[]`;

exports[`loader should work with object value with "default" syntax: errors 1`] = `[]`;

exports[`loader should work with object value with "default" syntax: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export default Foo;
"
`;

exports[`loader should work with object value with "default" syntax: result 1`] = `
{
  "default": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with object value with "default" syntax: warnings 1`] = `[]`;

exports[`loader should work with object value: errors 1`] = `[]`;

exports[`loader should work with object value: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should work with object value: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with object value: warnings 1`] = `[]`;

exports[`loader should work with source maps when the "devtool" option is enabled: errors 1`] = `[]`;

exports[`loader should work with source maps when the "devtool" option is enabled: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};

var simple = function simple() {};

var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function (width, height, data) {
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }

}

const single = 'single';
const myVariable = new MyClass();
/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should work with source maps when the "devtool" option is enabled: result 1`] = `{}`;

exports[`loader should work with source maps when the "devtool" option is enabled: warnings 1`] = `[]`;

exports[`loader should work with string value: errors 1`] = `[]`;

exports[`loader should work with string value: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should work with string value: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with string value: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "    " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "    " value for export",
]
`;

exports[`loader should work with the "commonjs" module format for "    " export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "   " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "   " value for export",
]
`;

exports[`loader should work with the "commonjs" module format for "   " export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "   Foo   " export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "   Foo   " export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  Foo
};
"
`;

exports[`loader should work with the "commonjs" module format for "   Foo   " export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for "   Foo   " export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "  " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "  " value for export",
]
`;

exports[`loader should work with the "commonjs" module format for "  " export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for " " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid " " value for export",
]
`;

exports[`loader should work with the "commonjs" module format for " " export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "\`invalid\`" export list: errors 1`] = `
[
  "ModuleParseError: Module parse failed: Unexpected token (30:2)
File was processed with these loaders:",
]
`;

exports[`loader should work with the "commonjs" module format for "\`invalid\`" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  Foo
};
"
`;

exports[`loader should work with the "commonjs" module format for "Foo" export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for "Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "default Foo" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "commonjs" format can't be used with the "default" syntax export in "default Foo" value",
]
`;

exports[`loader should work with the "commonjs" module format for "default Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "default" export list: errors 1`] = `
[
  "ModuleParseError: Module parse failed: Unexpected keyword 'default' (30:2)
File was processed with these loaders:",
]
`;

exports[`loader should work with the "commonjs" module format for "default" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple   Foo" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid command "" in "multiple   Foo" for exports. There must be only one separator: " ", or "|"",
]
`;

exports[`loader should work with the "commonjs" module format for "multiple   Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple Foo Foo-Bar" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple Foo Foo-Bar" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  "Foo-Bar": (Foo)
};
"
`;

exports[`loader should work with the "commonjs" module format for "multiple Foo Foo-Bar" export list: result 1`] = `
{
  "Foo-Bar": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for "multiple Foo Foo-Bar" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple Foo FooA FooB" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "multiple Foo FooA FooB" value for export",
]
`;

exports[`loader should work with the "commonjs" module format for "multiple Foo FooA FooB" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple Foo FooA" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple Foo FooA" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  "FooA": (Foo)
};
"
`;

exports[`loader should work with the "commonjs" module format for "multiple Foo FooA" export list: result 1`] = `
{
  "FooA": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for "multiple Foo FooA" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  Foo
};
"
`;

exports[`loader should work with the "commonjs" module format for "multiple Foo" export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for "multiple Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  Foo
};
"
`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo" export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo|FooA" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo|FooA" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  "FooA": (Foo)
};
"
`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo|FooA" export list: result 1`] = `
{
  "FooA": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for "multiple|Foo|FooA" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "named Foo" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "commonjs" format can't be used with the "named" syntax export in "named Foo" value",
]
`;

exports[`loader should work with the "commonjs" module format for "named Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "single Foo FooA" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "single" syntax can't have "FooA" alias in "single Foo FooA" value",
]
`;

exports[`loader should work with the "commonjs" module format for "single Foo FooA" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "single Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "single Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = Foo;
"
`;

exports[`loader should work with the "commonjs" module format for "single Foo" export list: result 1`] = `
{
  "Image": [Function],
}
`;

exports[`loader should work with the "commonjs" module format for "single Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "single single" export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "single single" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = single;
"
`;

exports[`loader should work with the "commonjs" module format for "single single" export list: result 1`] = `"single"`;

exports[`loader should work with the "commonjs" module format for "single single" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for "unknown Foo" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Unknown "unknown" syntax export in "unknown Foo" value",
]
`;

exports[`loader should work with the "commonjs" module format for "unknown Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["Foo","Bar"] export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["Foo","Bar"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  Foo,
  Bar
};
"
`;

exports[`loader should work with the "commonjs" module format for ["Foo","Bar"] export list: result 1`] = `
{
  "Bar": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for ["Foo","Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo Bar","multiple Bar"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Bar" (as "alias"), "Bar" (as "name") identifiers found in "",
]
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo Bar","multiple Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo Baz","multiple Bar Baz"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Baz" (as "alias"), "Baz" (as "alias") identifiers found in "",
]
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo Baz","multiple Bar Baz"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo FooA","multiple Bar BarA"] export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo FooA","multiple Bar BarA"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  "FooA": (Foo),
  "BarA": (Bar)
};
"
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo FooA","multiple Bar BarA"] export list: result 1`] = `
{
  "BarA": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "FooA": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo FooA","multiple Bar BarA"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Bar Foo"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Foo" (as "name"), "Foo" (as "alias") identifiers found in "",
]
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Bar Foo"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Bar"] export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Bar"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  Foo,
  Bar
};
"
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Bar"] export list: result 1`] = `
{
  "Bar": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Foo"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Foo" (as "name"), "Foo" (as "name") identifiers found in "",
]
`;

exports[`loader should work with the "commonjs" module format for ["multiple Foo","multiple Foo"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction foo.bar","multiple Bar foo.bar"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "foo.bar" (as "alias"), "foo.bar" (as "alias") identifiers found in "",
]
`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction foo.bar","multiple Bar foo.bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction myFunction","multiple Bar BarA"] export list: errors 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction myFunction","multiple Bar BarA"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
module.exports = {
  "myFunction": (myVariable.myFunction),
  "BarA": (Bar)
};
"
`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction myFunction","multiple Bar BarA"] export list: result 1`] = `
{
  "BarA": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "myFunction": [Function],
}
`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction myFunction","multiple Bar BarA"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction","multiple Bar myVariable.myFunction"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "myVariable.myFunction" (as "name"), "myVariable.myFunction" (as "alias") identifiers found in "",
]
`;

exports[`loader should work with the "commonjs" module format for ["multiple myVariable.myFunction","multiple Bar myVariable.myFunction"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for ["single Foo","single Bar"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "commonjs" format can't have multiple "single" exports in "",
]
`;

exports[`loader should work with the "commonjs" module format for ["single Foo","single Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for {"syntax":"default","name":"Foo"} export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "commonjs" format can't be used with the "default" syntax export in "",
]
`;

exports[`loader should work with the "commonjs" module format for {"syntax":"default","name":"Foo"} export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for {"syntax":"single","name":"Foo","alias":"FooA"} export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "single" syntax can't have "FooA" alias in "",
]
`;

exports[`loader should work with the "commonjs" module format for {"syntax":"single","name":"Foo","alias":"FooA"} export list: warnings 1`] = `[]`;

exports[`loader should work with the "commonjs" module format for {"syntax":"unknown","name":"Foo"} export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
ValidationError: Invalid options object. Exports Loader has been initialized using an options object that does not match the API schema.",
]
`;

exports[`loader should work with the "commonjs" module format for {"syntax":"unknown","name":"Foo"} export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "    " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "    " value for export",
]
`;

exports[`loader should work with the "module" module format for "    " export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "   " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "   " value for export",
]
`;

exports[`loader should work with the "module" module format for "   " export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "   Foo   " export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for "   Foo   " export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should work with the "module" module format for "   Foo   " export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for "   Foo   " export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "  " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "  " value for export",
]
`;

exports[`loader should work with the "module" module format for "  " export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for " " export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid " " value for export",
]
`;

exports[`loader should work with the "module" module format for " " export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "\`invalid\`" export list: errors 1`] = `
[
  "ModuleParseError: Module parse failed: Unexpected token (30:2)
File was processed with these loaders:",
]
`;

exports[`loader should work with the "module" module format for "\`invalid\`" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for "Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should work with the "module" module format for "Foo" export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for "Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "default Foo FooA" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "default" syntax can't have "FooA" alias in "default Foo FooA" value",
]
`;

exports[`loader should work with the "module" module format for "default Foo FooA" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "default Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for "default Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export default Foo;
"
`;

exports[`loader should work with the "module" module format for "default Foo" export list: result 1`] = `
{
  "default": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for "default Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "default default" export list: errors 1`] = `
[
  "ModuleParseError: Module parse failed: Unexpected token (29:15)
File was processed with these loaders:",
]
`;

exports[`loader should work with the "module" module format for "default default" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "default" export list: errors 1`] = `
[
  "ModuleParseError: Module parse failed: Unexpected keyword 'default' (30:2)
File was processed with these loaders:",
]
`;

exports[`loader should work with the "module" module format for "default" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "multiple Foo" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "module" format can't be used with the "multiple" syntax export in "multiple Foo" value",
]
`;

exports[`loader should work with the "module" module format for "multiple Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "named Foo FooA FooB" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Invalid "named Foo FooA FooB" value for export",
]
`;

exports[`loader should work with the "module" module format for "named Foo FooA FooB" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "named Foo FooA" export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for "named Foo FooA" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo as FooA
};
"
`;

exports[`loader should work with the "module" module format for "named Foo FooA" export list: result 1`] = `
{
  "FooA": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for "named Foo FooA" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "named Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for "named Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should work with the "module" module format for "named Foo" export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for "named Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "named|Foo" export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for "named|Foo" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo
};
"
`;

exports[`loader should work with the "module" module format for "named|Foo" export list: result 1`] = `
{
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for "named|Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "named|Foo|FooA" export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for "named|Foo|FooA" export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo as FooA
};
"
`;

exports[`loader should work with the "module" module format for "named|Foo|FooA" export list: result 1`] = `
{
  "FooA": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for "named|Foo|FooA" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "single Foo" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "module" format can't be used with the "single" syntax export in "single Foo" value",
]
`;

exports[`loader should work with the "module" module format for "single Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for "unknown Foo" export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Unknown "unknown" syntax export in "unknown Foo" value",
]
`;

exports[`loader should work with the "module" module format for "unknown Foo" export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["Foo","Bar"] export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for ["Foo","Bar"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo,
  Bar
};
"
`;

exports[`loader should work with the "module" module format for ["Foo","Bar"] export list: result 1`] = `
{
  "Bar": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for ["Foo","Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["default Foo","default Bar"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "module" format can't have multiple "default" exports in "",
]
`;

exports[`loader should work with the "module" module format for ["default Foo","default Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA","named Baz"] export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA","named Baz"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export default Foo;
export {
  Bar as BarA,
  Baz
};
"
`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA","named Baz"] export list: result 1`] = `
{
  "BarA": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "Baz": {
    "nestedFunction": [Function],
    "nestedNumber": "12",
  },
  "default": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA","named Baz"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA"] export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export default Foo;
export {
  Bar as BarA
};
"
`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA"] export list: result 1`] = `
{
  "BarA": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "default": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar BarA"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar"] export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export default Foo;
export {
  Bar
};
"
`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar"] export list: result 1`] = `
{
  "Bar": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "default": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for ["default Foo","named Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo Bar","named Bar"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Bar" (as "alias"), "Bar" (as "name") identifiers found in "",
]
`;

exports[`loader should work with the "module" module format for ["named Foo Bar","named Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo Baz","named Bar Baz"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Baz" (as "alias"), "Baz" (as "alias") identifiers found in "",
]
`;

exports[`loader should work with the "module" module format for ["named Foo Baz","named Bar Baz"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo FooA","named Bar BarA"] export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo FooA","named Bar BarA"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo as FooA,
  Bar as BarA
};
"
`;

exports[`loader should work with the "module" module format for ["named Foo FooA","named Bar BarA"] export list: result 1`] = `
{
  "BarA": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "FooA": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for ["named Foo FooA","named Bar BarA"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo default","named Bar BarA"] export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo default","named Bar BarA"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo as default,
  Bar as BarA
};
"
`;

exports[`loader should work with the "module" module format for ["named Foo default","named Bar BarA"] export list: result 1`] = `
{
  "BarA": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "default": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for ["named Foo default","named Bar BarA"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo","named Bar Foo"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Foo" (as "name"), "Foo" (as "alias") identifiers found in "",
]
`;

exports[`loader should work with the "module" module format for ["named Foo","named Bar Foo"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo","named Bar"] export list: errors 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo","named Bar"] export list: module 1`] = `
"var Foo = Foo || {};
var Bar = Bar || {};
var Baz = {
  nestedNumber: '12',
  nestedFunction: function test() {}
};
var simple = function simple() {};
var simple_foo = [1, 2, 3, 4, 5];

Foo.Image = function(width, height, data){
  this.width = width || 0;
  this.height = height || 0;
  this.data = data || [];
};

Bar.test = [1, 2, 3, 4];

class MyClass {
  myFunction() {
    return 12;
  }
}

const single = 'single';

const myVariable = new MyClass();

/*** EXPORTS FROM exports-loader ***/
export {
  Foo,
  Bar
};
"
`;

exports[`loader should work with the "module" module format for ["named Foo","named Bar"] export list: result 1`] = `
{
  "Bar": {
    "test": [
      1,
      2,
      3,
      4,
    ],
  },
  "Foo": {
    "Image": [Function],
  },
}
`;

exports[`loader should work with the "module" module format for ["named Foo","named Bar"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for ["named Foo","named Foo"] export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: Duplicate "Foo" (as "name"), "Foo" (as "name") identifiers found in "",
]
`;

exports[`loader should work with the "module" module format for ["named Foo","named Foo"] export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for {"syntax":"single","name":"Foo","alias":"FooA"} export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "single" syntax can't have "FooA" alias in "",
]
`;

exports[`loader should work with the "module" module format for {"syntax":"single","name":"Foo","alias":"FooA"} export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for {"syntax":"single","name":"Foo"} export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: The "module" format can't be used with the "single" syntax export in "",
]
`;

exports[`loader should work with the "module" module format for {"syntax":"single","name":"Foo"} export list: warnings 1`] = `[]`;

exports[`loader should work with the "module" module format for {"syntax":"unknown","name":"Foo"} export list: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
ValidationError: Invalid options object. Exports Loader has been initialized using an options object that does not match the API schema.",
]
`;

exports[`loader should work with the "module" module format for {"syntax":"unknown","name":"Foo"} export list: warnings 1`] = `[]`;
